fix: download button mobile overflow

--- a/navi/layouts.css
+++ b/navi/layouts.css
@@ -543,6 +543,7 @@
     .landing .download_button {
         margin: 0;
         width: 100%;
+        overflow: hidden;
     }
     .landing #download {
         padding: 50px 30px;
